--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,7 @@ dependencies {
     implementation "com.sparkjava:spark-core:2.6.0"
     implementation "com.sparkjava:spark-template-handlebars:2.5.5"
     implementation 'org.slf4j:slf4j-simple:1.7.21'
+    implementation 'org.slf4j:slf4j-simple:1.7.21'
+    implementation 'org.sql2o:sql2o:1.5.4'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
 }
